# EggCRM

./: .env.example  .gitignore  ACTIVE.md  CLAUDE.md  DECISIONS.md  DECISIONS_4.md  PARKING_LOT.md  PROJECT.md  PROJECT_OS.md  README.md  README_PROJECT4.md  ROADMAP.md  package-lock.json  package.json  project-3-handoff.md  project-3-plan.md  pyproject.toml  requirements.txt
adk_app/: README.md
configs/: guardrails_spec.md  judge_rubric.md  memory_extraction_prompt.md  output_guard_spec.md  system_prompt.md
docs/: ci-eval-gate-spec.md  ci-eval-gate.md  project-4-handoff.md
eval/: __init__.py  adversarial_cases.py  baseline_phase1.json  baseline_phase1.py  baseline_phase2.json  baseline_phase2.py  baseline_phase3.json  baseline_phase3.py  baseline_phase4.json  baseline_phase4.py  baseline_phase5.json  baseline_phase5.py  baselines.json  ci_gate.py  combined_report.json  combined_report_coord.json  cross_session_scenarios.md  golden_dataset.py  golden_responses.json  golden_responses_coord.json  grounding_eval.json  grounding_eval.py  output_failure_cases.py  phase4_report.json  rag_baseline.json  rag_baseline.py  routing_baseline.json  routing_baseline.py  routing_cases.py  run_eval.py  run_phase4.py  tier_discipline.json  tier_discipline.py
localdoc/: novacrm-demo.jsx  project-3-claude-code-handoff.md  project-3-plan.md  project-4-handoff.md
outputs/: eval-report.md  eval-report_coord.md  phase4-report.md
tests/: test_ci_gate.py  test_coordinator.py  test_grounding.py  test_guardrails.py  test_memory.py  test_orchestrator.py  test_output_guard.py  test_rag.py  (+5 more)
(+68 files in other folders)
